[tool.poetry]
name = "kirana-ai-agent"
version = "0.1.0"
description = "Voice-enabled conversational AI agent for Kirana store ordering & inventory management."
authors = ["krVatsal <kumarvatsal34@gmail.com>"]
readme = "README.md"
package-mode = false  # Use Poetry only for dependency management (single-file app)

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = "*"
google-generativeai = "*"
langgraph = "*"
gTTS = "*"
python-dotenv = "*"
streamlit-js-eval = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E","F","I"]
ignore = []

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kirana-app = "streamlit.web.cli:main"
